# sspi-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  mall refactoring  rust-toolchain.toml  sspi-rs.txt
.github/: dependabot.yml
c-api/: Cargo.toml  build.rs  sspi.def
c-api/src/: common.rs  lib.rs  macros.rs  sec_buffer.rs  sec_handle.rs  sec_pkg_info.rs  sec_winnt_auth_identity.rs  security_tables.rs  utils.rs
ci/: build.sh
crates/dpapi/: Cargo.toml  README.md
crates/dpapi-cli-client/: Cargo.toml  README.md
crates/dpapi-cli-client/src/: cli.rs  logging.rs  main.rs  network_client.rs  session_token.rs  transport.rs
crates/dpapi-core/: Cargo.toml  README.md
crates/dpapi-core/src/: cursor.rs  decode.rs  encode.rs  error.rs  gkdi.rs  lib.rs  macros.rs  marker.rs  named.rs  padding.rs  str.rs  write_buf.rs
crates/dpapi-core/src/rpc/: bind.rs  epm.rs  mod.rs  pdu.rs  request.rs  verification.rs
crates/dpapi-core/tests/dpapi_core/: gkdi.rs  macros.rs
crates/dpapi-core/tests/dpapi_core/rpc/: epm.rs  mod.rs  pdu.rs  verification.rs
crates/dpapi-core/tests/rpc/: bind.rs  mod.rs
crates/dpapi-fuzzing/: Cargo.toml
crates/dpapi-fuzzing/src/: generator.rs  lib.rs
crates/dpapi-fuzzing/src/oracles/: decoding.rs  mod.rs  round_trip.rs
crates/dpapi-native-transport/: Cargo.toml
crates/dpapi-native-transport/src/: lib.rs
crates/dpapi-pdu/: Cargo.toml
crates/dpapi-pdu/src/: error.rs  gkdi.rs  lib.rs
crates/dpapi-pdu/src/rpc/: bind.rs  epm.rs  mod.rs  pdu.rs  request.rs  verification.rs
crates/dpapi-pdu/tests/dpapi_pdu/: gkdi.rs  macros.rs  main.rs
crates/dpapi-pdu/tests/dpapi_pdu/rpc/: bind.rs  epm.rs  mod.rs  pdu.rs  verification.rs
crates/dpapi-transport/: Cargo.toml  README.md
crates/dpapi-transport/src/: connect_options.rs  lib.rs
crates/dpapi-web/: Cargo.toml  README.md  rust-toolchain.toml
crates/dpapi-web/.cargo/: config.toml
crates/dpapi-web/src/: error.rs  lib.rs  network_client.rs  session_token.rs  transport.rs
crates/dpapi-ws/: Cargo.toml  README.md
crates/dpapi-ws/src/: gateway.rs  gateway_client.rs  lib.rs  webapp_http_client.rs
crates/dpapi/src/: blob.rs  client.rs  connect_options.rs  crypto.rs  epm.rs  error.rs  gkdi.rs  lib.rs  network_client.rs  sid.rs  sid_utils.rs  str.rs  stream.rs  utils.rs  webapp_http_client.rs
crates/dpapi/src/crypto/: hmac_sha_prf.rs  kout.rs  mod.rs
crates/dpapi/src/rpc/: auth.rs  bind.rs  client.rs  macros.rs  mod.rs  pdu.rs  request.rs  verification.rs
crates/dpapi/tests/: macros.rs  main.rs
crates/dpapi/tests/dpapi/: blob.rs  connection_url.rs  crypto.rs  epm.rs  gkdi.rs  macros.rs  main.rs
crates/dpapi/tests/dpapi/rpc/: bind.rs  mod.rs  pdu.rs  verification.rs
crates/dpapi/tests/rpc/: bind.rs  pdu.rs
crates/kdc/: CHANGELOG.md  Cargo.toml  README.md
crates/kdc/src/: as_exchange.rs  config.rs  error.rs  lib.rs  tgs_exchange.rs  ticket.rs
crates/pcsc-lite-rs/: Cargo.toml  README.md
crates/pcsc-lite-rs/src/: lib.rs
crates/winscard/: CHANGELOG.md  Cargo.toml  README.md
crates/winscard-rs/: Cargo.toml  README.md
crates/winscard-rs/src/: ber_tlv.rs  card_capability_container.rs  chuid.rs  compression.rs  dummy_rng.rs  helpers.rs  lib.rs  scard.rs  scard_context.rs  winscard.rs
crates/winscard-rs/winscard-rs/: Cargo.toml
crates/winscard-rs/winscard-rs/src/: lib.rs  piv_cert.rs  tlv_tags.rs
crates/winscard/src/: ber_tlv.rs  card_capability_container.rs  chuid.rs  compression.rs  dummy_rng.rs  env.rs  lib.rs  macros.rs  piv_cert.rs  scard.rs  scard_context.rs  tlv_tags.rs  winscard.rs
csspi/: Cargo.toml  csspi.h
csspi/src/: a.rs  common.rs  lib.rs  sec_buffer.rs  sec_winnt_auth_identity.rs  sspi_data_types.rs  utils.rs  w.rs
doc/: crates.js  help.html  settings.html  src-files.js
examples/: client.rs  kerberos-win.rs  kerberos.rs  pass_the_hash.rs  server.rs  soap.xml
ffi/: Cargo.toml  README.md  build.rs  sspi.def  sspi_base.def  sspi_dpapi.def  sspi_winscard.def
ffi/dotnet/: Devolutions.Sspi.sln
ffi/dotnet/Devolutions.Sspi/: Devolutions.Sspi.csproj  Devolutions.Sspi.targets  Sspi.DllImportResolver.cs  Sspi.g.cs
ffi/dotnet/PackageTests/: PackageTests.csproj  UnitTests.cs
ffi/src/: common.rs  credentials_attributes.rs  debug.rs  lib.rs  logging.rs  macros.rs  sec_buffer.rs  sec_handle.rs  sec_pkg_info.rs  sec_winnt_auth_identity.rs  security_tables.rs  sspi_data_types.rs  utils.rs
ffi/src/dpapi/: api.rs  dpapi.rs  macros.rs  mod.rs  network_client.rs  session_token.rs
ffi/src/sspi/: cert_utils.rs  common.rs  credentials_attributes.rs  macros.rs  mod.rs  scard_cert.rs  sec_buffer.rs  sec_handle.rs  sec_pkg_info.rs  sec_winnt_auth_identity.rs  security_tables.rs  smartcard.rs  sspi_data_types.rs  utils.rs  win_scard_cert.rs
ffi/src/sspi/smartcard/: mod.rs  piv.rs
ffi/src/winscard/: buf_alloc.rs  buff_alloc.rs  functions_table.rs  macros.rs  mod.rs  piv.rs  scard.rs  scard_context.rs  scard_handle.rs
ffi/src/winscard/pcsc_lite/: functions.rs  mod.rs
ffi/src/winscard/system_scard/: card.rs  context.rs  macros.rs  mod.rs
ffi/symbol-rename-macro/: Cargo.toml
ffi/symbol-rename-macro/src/: lib.rs
fuzz/: Cargo.toml
proptest-regressions/: auth_identity.txt
src/: auth_identity.rs  ber.rs  cert_utils.rs  channel_bindings.rs  credssp.rs  crypto.rs  decrypt_buffer.rs  dns.rs  encryption.rs  generator.rs  kdc.rs  krb.rs  lib.rs  negotiate.rs  network_client.rs  ntlm.rs  pk_init.rs  rustls.rs  secret.rs  security_buffer.rs  smartcard.rs  sspi.rs  utf16string.rs  utils.rs
sspi/: Cargo.toml
test_assets/: krb5.conf
tests/: client_server.rs  common.rs  hybrid.rs  ntlm.rs  pass_the_hash.rs  winapi.rs  (+1 more)
tools/dpapi-cli-client/: Cargo.toml  README.md  data.blob
tools/dpapi-cli-client/src/: cli.rs  logging.rs  main.rs  network_client.rs  session_token.rs
tools/wasm-testcompile/: Cargo.toml  check.ps1  rust-toolchain.toml
tools/wasm-testcompile/.cargo/: config.toml
tools/wasm-testcompile/src/: lib.rs
winscard-rs/: Cargo.toml
winscard-rs/src/: chuid.rs  helpers.rs  lib.rs  piv_cert.rs  scard.rs  scard_context.rs  winscard.rs
(+198 files in other folders)
