[package]
name = "sspi-ffi"
version = "0.1.3"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/sspi-rs"
repository = "https://github.com/devolutions/sspi-rs"
keywords = ["ntlm", "auth", "sspi", "windows", "kerberos"]
edition = "2021"
publish = false

[lib]
name = "sspi"
crate-type = ["cdylib"]

[features]
default = ["scard"]
tsssp = ["sspi/tsssp"]
scard = ["sspi/scard"]

[dependencies]
cfg-if = "0.1"
libc = "0.2"
num-traits = "0.2"
whoami = "1.2.3"
sspi = { path = "..", features = ["network_client", "dns_resolver"] }

# logging
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["std", "fmt", "local-time", "env-filter"] }

[target.'cfg(windows)'.dependencies]
symbol-rename-macro = { path = "./symbol-rename-macro" }
winapi = "0.3.9"
windows-sys = { version = "0.42.0", features = ["Win32_Security_Authentication_Identity", "Win32_Security_Credentials", "Win32_Foundation"] }
