[package]
name = "sspi-ffi"
version = "0.0.0"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/sspi-rs"
repository = "https://github.com/devolutions/sspi-rs"
keywords = ["ntlm", "auth", "sspi", "windows", "kerberos"]
edition = "2021"
publish = false

[lib]
name = "sspi"
crate-type = ["cdylib"]

[features]
default = ["aws-lc-rs", "scard", "dpapi"]
tsssp = ["sspi/tsssp", "dpapi/tsssp"]
scard = ["sspi/scard", "dep:ffi-types", "dep:winscard", "dep:bitflags", "dep:picky-asn1-x509", "dep:picky"]
aws-lc-rs = ["sspi/aws-lc-rs"]
ring = ["sspi/ring"]
dpapi = ["dep:dpapi", "dep:dpapi-transport", "dep:dpapi-native-transport", "dep:tokio", "dep:url", "dep:ffi-types"]

[dependencies]
cfg-if.workspace = true
num-traits = { workspace = true, default-features = true }
whoami.workspace = true
ffi-types = { workspace = true, features = ["winscard"], optional = true }
picky-asn1-der.workspace = true
uuid.workspace = true
winscard = { workspace = true, features = ["std"], optional = true }
dpapi = { workspace = true, optional = true }
dpapi-transport = { workspace = true, optional = true }
dpapi-native-transport = { workspace = true, optional = true }
url = { version = "2.5", optional = true }
tokio = { workspace = true, optional = true, features = ["rt"]}
# logging
tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, features = ["std", "fmt", "local-time", "env-filter"] }

libc = "0.2"
sspi = { path = "..", default-features = false, features = ["network_client"] }

[target.'cfg(windows)'.dependencies]
symbol-rename-macro = { path = "./symbol-rename-macro" }
windows-sys = { workspace = true, features = ["Win32_Security_Cryptography", "Win32_Security_Authentication_Identity", "Win32_Security_Credentials", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_Security", "Win32_System_Threading"] }

[target.'cfg(not(windows))'.dependencies]
bitflags = { workspace = true, optional = true }
picky-asn1-x509 = { workspace = true, optional = true }
picky = { workspace = true, features = ["x509"], optional = true }

[target.'cfg(not(any(target_os="macos", target_os="ios", windows)))'.dependencies]
sspi = { path = "..", default-features = false, features = ["dns_resolver"] }

[dev-dependencies]
sspi = { path = "..", features = ["__test-data"] }

[lints]
workspace = true
