[package]
name = "winscard-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/sspi-rs"
repository = "https://github.com/devolutions/sspi-rs"
authors = ["Devolutions Inc. <infos@devolutions.net>"]

[features]
proptest = ["std"]
std = []

[lib]
name = "winscard"

[dependencies]
iso7816 = "0.1.1"
picky = "6.3.0"

[dev-dependencies]
proptest = "1.2.0"
