[package]
name = "winscard-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/sspi-rs"
repository = "https://github.com/devolutions/sspi-rs"
authors = ["Devolutions Inc. <infos@devolutions.net>"]

[features]
proptest = ["std"]
std = []

[lib]
name = "winscard"

[dependencies]
bitflags = "2.4.0"
chrono = "0.4.30"
iso7816 = "0.1.1"
iso7816-tlv = "0.4.3"
picky = "6.3.0"
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
proptest = "1.2.0"
