[package]
name = "dpapi-cli-client"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
xflags = "0.3"
tokio = { version = "1.44", features = ["rt-multi-thread"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
url = { version = "2.5" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
transport = { git = "https://github.com/Devolutions/devolutions-gateway.git", rev = "4fd9c22" }

dpapi.workspace = true
dpapi-ws.workspace = true
dpapi-transport.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["std", "fmt", "local-time", "env-filter"] }
futures-util = {  version = "0.3" }
futures = { version = "0.3", features = ["io-compat"] }
