[package]
name = "dpapi-cli-client"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
xflags = "0.3"
tokio = { workspace = true, features = ["rt-multi-thread"] }
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

uuid = { workspace = true, features = ["std"] }
dpapi.workspace = true
dpapi-transport.workspace = true
dpapi-native-transport.workspace = true
serde = { workspace = true, features = ["derive"] }

tracing-subscriber = { workspace = true, features = ["std", "fmt", "local-time", "env-filter"] }
