[package]
name = "dpapi-core"
version = "0.1.0"
edition = "2024"

[features]
std = []

[dependencies]
bitflags.workspace = true
num-derive.workspace = true
num-traits = { workspace = true, default-features = true }
uuid = { workspace = true, features = ["std"] }
num-bigint-dig = { workspace = true, default-features = false }

thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
paste = "1.0"