[package]
name = "dpapi-transport"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/sspi-rs"
repository = "https://github.com/devolutions/sspi-rs"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "Common types and traits for implementing DPAPI RPC transport"

[dependencies]
url = "2.5"
thiserror = "2.0"
uuid.workspace = true