[package]
name = "dpapi"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/sspi-rs"
repository = "https://github.com/devolutions/sspi-rs"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "A Rust implementation of Windows DPAPI"
publish = false # not ready yet

[lib]
name = "dpapi"

[features]
tsssp = ["sspi/tsssp"]

[dependencies]
bitflags.workspace = true
byteorder.workspace = true
num-derive.workspace = true
num-traits = { workspace = true, default-features = true }
uuid = { workspace = true, features = ["std"] }
picky-asn1.workspace = true
picky-asn1-der.workspace = true
picky-krb.workspace = true
picky-asn1-x509 = { workspace = true, features = ["pkcs7"] }
sha1.workspace = true
sha2.workspace = true
rand.workspace = true
getrandom.workspace = true
hmac.workspace = true
digest = "=0.11.0-rc.3"
tracing = { workspace = true, default-features = true }
whoami.workspace = true

dpapi-core = { workspace = true, features = ["alloc"] }
dpapi-pdu.workspace = true
dpapi-transport.workspace = true
sspi = { path = "../..", version = "0.18" } # public

kbkdf = "0.0.1"
elliptic-curve = { version = "=0.14.0-rc.15", features = ["sec1", "std"] }
p521 = { version = "=0.14.0-pre.11", features = ["ecdh"] }
p256 = { version = "=0.14.0-pre.11", features = ["ecdh"] }
p384 = { version = "=0.14.0-pre.11", features = ["ecdh"] }
concat-kdf = { git = "https://github.com/RustCrypto/KDFs.git", rev = "f2f5c03" } # TODO: We need the new version, but it's not released yet.
typenum = "1.18"
aes-kw = "=0.3.0-rc.1"
aes-gcm = "=0.11.0-rc.1"
url = "2.5"

thiserror = "2.0"
regex = "1.11"

# Pin transitive dependencies
# TODO: Remove when stable versions will be released
block-buffer = "=0.11.0-rc.5"
block-padding = "=0.4.0-rc.4"
crypto-common = "=0.2.0-rc.4"
crypto-bigint = "=0.7.0-rc.8"
hkdf = "=0.13.0-rc.2"
sec1 = "=0.8.0-rc.10"
pkcs8 = "=0.11.0-rc.7"
der = "=0.8.0-rc.9"
spki = "=0.8.0-rc.4"
pem-rfc7468 = "=1.0.0-rc.3"
signature = "=3.0.0-rc.4"
ecdsa = "=0.17.0-rc.7"
rfc6979 = "=0.5.0-rc.1"
aes = "=0.9.0-rc.1"
aead = "=0.6.0-rc.2"
cipher = "=0.5.0-rc.1"
inout = "=0.2.0-rc.6"
ctr = "=0.10.0-rc.1"
ghash = "=0.6.0-rc.2"
polyval = "=0.7.0-rc.2"
universal-hash = "=0.6.0-rc.2"
ed25519 ="=3.0.0-rc.1"
cbc = "=0.2.0-rc.1"
des = "=0.9.0-rc.1"
pbkdf2 = "=0.13.0-rc.1"
md-5 = "=0.11.0-rc.2"
keccak = "=0.2.0-rc.0"
pkcs1 = "=0.8.0-rc.4"
rsa = "=0.10.0-rc.9"
sha3 = "=0.11.0-rc.3"
ff = { version = "=0.14.0-pre.0", default-features = false }
group = "=0.14.0-pre.0"
primefield = "=0.14.0-pre.6"
primeorder = "=0.14.0-pre.9"
ed25519-dalek = "=3.0.0-pre.1"
curve25519-dalek = "=5.0.0-pre.1"
crypto-primes = "=0.7.0-pre.3"
x25519-dalek = "=3.0.0-pre.1"

[dev-dependencies]
paste = "1.0"

[lints]
workspace = true
